--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -27,21 +27,21 @@ services:
     networks:
       - postgres
     restart: unless-stopped
-  api:
-    build: ./apps/api
-    environment:
-      - PORT=5000
-      - DATABASE_HOST=db
-      - DATABASE_PORT=5432
-      - DATABASE_NAME=postgres
-      - DATABASE_USER=postgres
-      - DATABASE_PASSWORD=postgres
-      - DATABASE_TYPE=postgresql
-      - DATABASE_SSL=false
-    depends_on:
-      - db
-    ports:
-      - "5000:5000"
+  # api:
+  #   build: ./apps/api
+  #   environment:
+  #     - PORT=5000
+  #     - DATABASE_HOST=db
+  #     - DATABASE_PORT=5432
+  #     - DATABASE_NAME=postgres
+  #     - DATABASE_USER=postgres
+  #     - DATABASE_PASSWORD=postgres
+  #     - DATABASE_TYPE=postgresql
+  #     - DATABASE_SSL=false
+  #   depends_on:
+  #     - db
+  #   ports:
+  #     - "5000:5000"
   # web:
   #   build: ./apps/web
   #   environment:
