feat: dockerize for api and db

--- a/apps/api/Dockerfile
+++ b/apps/api/Dockerfile
@@ -2,10 +2,14 @@ FROM node:23-alpine
 WORKDIR /app
 COPY package.json ./
 
-RUN npm install -g pnpm && pnpm install
-COPY . .
+RUN npm install -g pnpm
 
+COPY  . .
+RUN pnpm install
 RUN pnpm run build
+
+# RUN pnpm run build
+
 EXPOSE 5000
 
 CMD ["pnpm", "start"]
