--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -4,8 +4,11 @@ services:
     image: postgres
     restart: always
     environment:
-      - POSTGRES_USER=postgres
-      - POSTGRES_PASSWORD=postgres
+      - DATABASE_NAME=search_pro
+      - DATABASE_USER=postgres
+      - DATABASE_PASSWORD=postgres
+      - DATABASE_HOST=localhost
+      - DATABASE_PORT=5432
     ports:
       - "5432:5432"
     volumes:
@@ -18,7 +21,7 @@ services:
       - db
     environment:
       PGADMIN_DEFAULT_EMAIL: ${PGADMIN_DEFAULT_EMAIL:-pgadmin4@pgadmin.org}
-      PGADMIN_DEFAULT_PASSWORD: ${PGADMIN_DEFAULT_PASSWORD:-admin}
+      PGADMIN_DEFAULT_PASSWORD: ${PGADMIN_DEFAULT_PASSWORD:-postgres}
       PGADMIN_CONFIG_SERVER_MODE: "False"
     volumes:
       - pgadmin:/var/lib/pgadmin
@@ -27,21 +30,23 @@ services:
     networks:
       - postgres
     restart: unless-stopped
-  # api:
-  #   build: ./apps/api
-  #   environment:
-  #     - PORT=5000
-  #     - DATABASE_HOST=db
-  #     - DATABASE_PORT=5432
-  #     - DATABASE_NAME=postgres
-  #     - DATABASE_USER=postgres
-  #     - DATABASE_PASSWORD=postgres
-  #     - DATABASE_TYPE=postgresql
-  #     - DATABASE_SSL=false
-  #   depends_on:
-  #     - db
-  #   ports:
-  #     - "5000:5000"
+  api:
+    build: ./apps/api
+    environment:
+      - PORT=5000
+      - DATABASE_HOST=db
+      - DATABASE_PORT=5432
+      - DATABASE_NAME=postgres
+      - DATABASE_USER=postgres
+      - DATABASE_PASSWORD=postgres
+      - DATABASE_TYPE=postgresql
+      - DATABASE_SSL=false
+    depends_on:
+      - db
+    ports:
+      - "5000:5000"
+    networks:
+      - postgres
   # web:
   #   build: ./apps/web
   #   environment:
