--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -13,6 +13,10 @@
     "start:debug": "nest start --debug --watch",
     "start:prod": "node dist/main",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
+    "db:create": "pnpm mikro-orm schema:create --run",
+    "db:clear": "pnpm mikro-orm schema:drop --run",
+    "db:seed": "pnpm mikro-orm seeder:run --class=MultipleSeeder",
+    "db:reset": "pnpm run db:clear && pnpm run db:create && pnpm run db:seed",
     "test": "jest",
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
@@ -40,6 +44,9 @@
   "devDependencies": {
     "@eslint/eslintrc": "^3.1.0",
     "@eslint/js": "^9.13.0",
+    "@mikro-orm/cli": "^6.3.13",
+    "@mikro-orm/migrations": "^6.3.13",
+    "@mikro-orm/seeder": "^6.3.13",
     "@nestjs/cli": "^10.0.0",
     "@nestjs/schematics": "^10.0.0",
     "@nestjs/testing": "^10.0.0",
@@ -80,5 +87,11 @@
     ],
     "coverageDirectory": "../coverage",
     "testEnvironment": "node"
+  },
+  "mikro-orm": {
+    "useTsNode": true,
+    "configPaths": [
+      "./config/mikro-orm.config.dev.ts"
+    ]
   }
 }
