--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -14,7 +14,20 @@ services:
     volumes:
       - db:/var/lib/postgresql/data
     networks:
-      - postgres
+      - search-pro-network
+  redis:
+    container_name: redis
+    image: redis/redis-stack:latest
+    ports:
+      - "${REDIS_SERVER_PORT:-6379}:6379"
+      - "${REDIS_ENDPOINT_PORT:-8001}:8001"
+    healthcheck:
+      test: "bash -c 'redis-cli ping'"
+      retries: 3
+      interval: 10s
+    restart: always
+    networks:
+      - search-pro-network
   api:
     build: ./apps/api
     environment:
@@ -31,9 +44,9 @@ services:
     ports:
       - "5000:5000"
     networks:
-      - postgres
+      - search-pro-network
 networks:
-  postgres:
+  search-pro-network:
     driver: bridge
 volumes:
   db:
