--- a/apps/api/tsconfig.json
+++ b/apps/api/tsconfig.json
@@ -27,5 +27,5 @@
     }
   },
   "include": ["src/**/*.ts"],
-  "exclude": ["node_modules", "dist"]
+  "exclude": ["node_modules", "dist", "test", "**/*.spec.ts"]
 }
