--- a/apps/api/tsconfig.json
+++ b/apps/api/tsconfig.json
@@ -26,6 +26,6 @@
       "~/*": ["./src/*"]
     }
   },
-  "include": ["src/**/*.ts"],
+  "include": ["src/**/*.ts", "seeders/**/*.ts"],
   "exclude": ["node_modules", "dist", "test", "**/*.spec.ts"]
 }
