--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -4,11 +4,11 @@ services:
     image: postgres
     restart: always
     environment:
-      - DATABASE_NAME=search_pro
-      - DATABASE_USER=postgres
-      - DATABASE_PASSWORD=postgres
-      - DATABASE_HOST=localhost
-      - DATABASE_PORT=5432
+      - POSTGRES_USER=${DATABASE_USER:-postgres}
+      - POSTGRES_PASSWORD=${DATABASE_PASSWORD:-postgres}
+      - POSTGRES_DB=${DATABASE_NAME:-search_pro}
+      - POSTGRES_HOST=${DATABASE_HOST:-localhost}
+      - POSTGRES_PORT=${DATABASE_PORT:-5432}
     ports:
       - "5432:5432"
     volumes:
@@ -34,13 +34,17 @@ services:
       - PORT=5000
       - DATABASE_HOST=db
       - DATABASE_PORT=5432
-      - DATABASE_NAME=postgres
+      - DATABASE_NAME=search_pro
       - DATABASE_USER=postgres
       - DATABASE_PASSWORD=postgres
       - DATABASE_TYPE=postgresql
       - DATABASE_SSL=false
+      - REDIS_HOST=redis
+      - REDIS_PORT=6379
+      - REDIS_CONNECTION=${REDIS_CONNECTION:-redis://redis:6379}
     depends_on:
       - db
+      - redis
     ports:
       - "5000:5000"
     networks:
