fix: redis issue for development

--- a/.env
+++ b/.env
@@ -16,5 +16,5 @@ BASIC_AUTH_PASSWORD=admin
 # redis
 REDIS_SERVER_PORT=6379
 REDIS_ENDPOINT_PORT=8001
-REDIS_CONNECTION=redis://redis:6379
+REDIS_CONNECTION=redis://localhost:6379
 
