--- a/apps/api/.env
+++ b/apps/api/.env
@@ -13,4 +13,4 @@ BASIC_AUTH_USERNAME=admin
 BASIC_AUTH_PASSWORD=admin
 
 # redis
-REDIS_CONNECTION=redis://redis:6379
+REDIS_CONNECTION=redis://localhost:6379
