--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -13,13 +13,21 @@
     "@emotion/react": "^11.13.3",
     "@emotion/styled": "^11.13.0",
     "@mantine/core": "^7.13.4",
+    "@mantine/dates": "^7.13.5",
+    "@mantine/dropzone": "^7.13.5",
+    "@mantine/form": "^7.13.5",
     "@mantine/hooks": "^7.13.4",
     "@mantine/notifications": "^7.13.4",
     "autoprefixer": "^10.4.20",
+    "dayjs": "^1.11.13",
     "postcss": "^8.4.47",
+    "postcss-preset-mantine": "^1.17.0",
+    "postcss-simple-vars": "^7.0.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "tailwindcss": "^3.4.14"
+    "react-router-dom": "^6.28.0",
+    "tailwindcss": "^3.4.14",
+    "zustand": "^5.0.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.13.0",
