--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -18,7 +18,9 @@
     "@mantine/form": "^7.13.5",
     "@mantine/hooks": "^7.13.4",
     "@mantine/notifications": "^7.13.4",
+    "@tabler/icons-react": "^3.21.0",
     "autoprefixer": "^10.4.20",
+    "clsx": "^2.1.1",
     "dayjs": "^1.11.13",
     "postcss": "^8.4.47",
     "postcss-preset-mantine": "^1.17.0",
