--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,6 +1,7 @@
 version: "3.9"
 services:
   db:
+    container_name: search_pro_db
     image: postgres
     restart: always
     environment:
@@ -16,7 +17,7 @@ services:
     networks:
       - search-pro-network
   redis:
-    container_name: redis
+    container_name: search_pro_redis
     image: redis/redis-stack:latest
     ports:
       - "${REDIS_SERVER_PORT:-6379}:6379"
@@ -29,6 +30,7 @@ services:
     networks:
       - search-pro-network
   api:
+    container_name: search_pro_api
     build: ./apps/api
     environment:
       - PORT=5000
@@ -46,9 +48,12 @@ services:
       - db
       - redis
     ports:
-      - "5000:5000"
+      - "6868:5000"
     networks:
       - search-pro-network
+    volumes:
+      - ./apps/api:/app
+      - /app/node_modules
 networks:
   search-pro-network:
     driver: bridge
